--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 <p style="color:red;font-size:25px;text-decoration:underline;">text book-2 <p style="color:red;text-align: center;font-size: 25px;"> 209 SYSTEM ANALYSIS AND DESIGN unit -1 </p>
 <br>
 
-<img src="SAQ-1.png" class="image1" width="25%"></img>
+<img src="thumnealsaq.png" class="image1" width="25%"></img>
 
 
 <div style="text-align:center;" >
