--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 <br>
 <hr>
 
-<p style="color:red;font-size:25px;text-decoration:underline;">text book-2 <p style="color:red;text-align: center;font-size: 25px;"> 209 SYSTEM ANALYSIS AND DESIGN unit -1 </p>
+<p style="color:red;font-size:25px;text-decoration:underline;">text book-2 <p style="color:red;text-align: center;font-size: 25px;"> 209 SYSTEM ANALYSIS AND DESIGN</p>
 <br>
 
 <img src="thumnealsaq.jpg" class="image1" width="25%"></img>
