--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     
     <br>
     <br>
-    <a href="dbms2book.pdf"> <button class="btn" style="width:25%" ><i class="fa fa-download"></i> Download </button></a>
+    <a href="dbmsshortbook.pdf"> <button class="btn" style="width:25%" ><i class="fa fa-download"></i> Download </button></a>
     
 </div>
 <br>
