--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 <br> 
 <hr>
 <br>
-<p style="color:red;font-size:25px;text-decoration:underline;">text book-1 <p style="color:black;text-align: center;font-size: 25px;"> 208 Database Management System - II</p>
+ <p style="color:red;text-align: center;font-size: 25px;"> 208 Database Management System - II</p>
 <br>
 
 <img src="dbmsthumnale.png" class="image1"></img>
@@ -525,7 +525,7 @@
 <br>
 <hr>
 
-<p style="color:red;font-size:25px;text-decoration:underline;">text book-2 <p style="color:red;text-align: center;font-size: 25px;"> 209 SYSTEM ANALYSIS AND DESIGN</p>
+ <p style="color:red;text-align: center;font-size: 25px;"> 209 SYSTEM ANALYSIS AND DESIGN</p>
 <br>
 
 <img src="thumnealsaq.jpg" class="image1" width="25%"></img>
@@ -544,7 +544,7 @@
 <br>
 <br>
 <hr>
-<p style="color:red;font-size:25px;text-decoration:underline;">text book-3<p style="color:red;text-align: center;font-size: 25px;"> 210 CORE JAVA </p>
+<p style="color:red;text-align: center;font-size: 25px;"> 210 CORE JAVA </p>
 <br>
 
 <img src="cj.png" class="image1"  width="25%"></img>
@@ -561,7 +561,7 @@
 </div>
 <br>
 <hr>
-<p style="color:red;font-size:25px;text-decoration:underline;">text book-4 <p style="color:red;text-align: center;font-size: 25px;"> 211 E-COMMERCE </p>
+<p style="color:red;text-align: center;font-size: 25px;"> 211 E-COMMERCE </p>
 <br>
 
 <img src="ec.png" class="image1" width="25%"></img>
