--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <b><h1 style="color:red;font-size:50px;text-align:center;text-decoration: underline;">Study Saterial B.C.A sem-4</h1></b>
+    <b><h1 style="color:red;font-size:50px;text-align:center;text-decoration: underline;">Study Material B.C.A sem-4</h1></b>
     <head>
         
         <!-- Add icon library -->
