--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     208 - Database Management System
     <br>
     <br>
-    <a href="dbms2015-Copy.pdf"> <button class="btn" style="width:25%" ><i class="fa fa-download"></i> Download </button></a>
+    <a href="dbms2015.pdf"> <button class="btn" style="width:25%" ><i class="fa fa-download"></i> Download </button></a>
 </p>
 
 </p>
